--- a/packages/nuekit/test/app-router.html
+++ b/packages/nuekit/test/app-router.html
@@ -1,25 +1,42 @@
 
 
-<a href="/app/users/100">/users/100</a>
+<p>
+  <a href="/app/">Home</a>
+</p>
 
-<a href="/app/users/5000">/users/5000</a>
+<p>
+  <a href="/app/users/">/users/</a>
+  <a href="/app/users/100">/users/100</a>
+  <a href="3000">3000</a>
+</p>
 
-<a href="/app/customers/">/customers/</a>
 
-<a href="/something/else">/something/else</a>
+<p>
+  <a href="/app/customers/">/customers/</a>
+  <a href="/something/else">/something/else</a>
+</p>
 
+<p>
+  <a href="/app/users/?start=0">?start=0</a>
+  <a href="/app/users/?start=10">?start=10</a>
+  <a href="/app/users/?uid=2000">?id=2000</a>
+</p>
+
+<p>
+  <a href="/test/app-router.html">Back</a>
+</p>
 
 <script type="module">
-  import { router } from '/src/browser/app-router-2.js'
+  import { router } from '/src/browser/app-router.js'
 
-  router.setup('/app/:type/:id', ['uid'])
+  router.setup('/app/:type/:id', ['uid', 'start'])
 
-  router.on('type', data => {
-    console.info('type', data)
+  router.on('type start', (state, changes) => {
+    console.info('type or start')
   })
 
-  router.on('id', data => {
-    console.info('id', data)
+  router.on('id uid', (state, changes) => {
+    console.info('id or uid')
   })
 
   router.start()
