95% of SPA without design

--- a/packages/examples/simple-crm/app/index.html
+++ b/packages/examples/simple-crm/app/index.html
@@ -2,3 +2,14 @@
 <main>
   <app-loader/>
 </main>
+
+<dialog id="help" popover>
+  <button popovertarget="help">x</button>
+  <h2>Keyboard shortcuts</h2>
+
+  <dl>
+    <dt>Next page</dt>      <dd><kbd>l</kbd></dd>
+    <dt>Previous page</dt>  <dd><kbd>l</kbd></dd>
+  </dl>
+
+</dialog>
