--- a/packages/examples/simple-crm/app/index.html
+++ b/packages/examples/simple-crm/app/index.html
@@ -3,6 +3,8 @@
   <app-loader/>
 </main>
 
+<symbols dir="icon"/>
+
 <dialog id="help" popover>
   <button popovertarget="help">x</button>
   <h2>Keyboard shortcuts</h2>
