Initial styling for the app

--- a/packages/examples/simple-crm/app/index.html
+++ b/packages/examples/simple-crm/app/index.html
@@ -1,7 +1,16 @@
 
-<main>
-  <app-loader/>
-</main>
+<div class="app ui">
+  <aside class="navigation panel">
+    <header>
+      <h1><img class="logo" src="/img/logo.svg"> Big Design Inc.</h1>
+    </header>
+    <section>
+      <p>Loading...</p>
+    </section>
+  </aside>
+  <main  class="loading panel"/>
+  <aside class="loading details panel"/>
+</div>
 
 <symbols dir="icon"/>
 
@@ -13,5 +22,7 @@
     <dt>Next page</dt>      <dd><kbd>l</kbd></dd>
     <dt>Previous page</dt>  <dd><kbd>l</kbd></dd>
   </dl>
-
 </dialog>
+
+
+
