--- a/packages/examples/simple-crm/app/index.html
+++ b/packages/examples/simple-crm/app/index.html
@@ -1,16 +1,5 @@
 
-<div class="app ui">
-  <aside class="navigation panel">
-    <header>
-      <h1><img class="logo" src="/img/logo.svg"> Big Design Inc.</h1>
-    </header>
-    <section>
-      <p>Loading...</p>
-    </section>
-  </aside>
-  <main  class="loading panel"/>
-  <aside class="loading details panel"/>
-</div>
+<div id="app"/>
 
 <symbols dir="icon"/>
 
