Seamless routing between MPA/SPA

--- a/packages/examples/simple-mpa/mpa/app/index.html
+++ b/packages/examples/simple-mpa/mpa/app/index.html
@@ -1,7 +1,7 @@
 
 <div id="app"/>
 
-<symbols dir="icon"/>
+<symbols dir="app/icon"/>
 
 <dialog id="help" popover>
   <button popovertarget="help">x</button>
