fix: accesskeys, focusable filters

--- a/packages/examples/simple-mpa/app/index.html
+++ b/packages/examples/simple-mpa/app/index.html
@@ -4,12 +4,16 @@
 <symbols dir="app/icon"/>
 
 <dialog id="help" popover>
-  <button popovertarget="help">x</button>
+  <button popovertarget="help">&times;</button>
   <h2>Keyboard shortcuts</h2>
 
   <dl>
-    <dt>Next page</dt>      <dd><kbd>l</kbd></dd>
-    <dt>Previous page</dt>  <dd><kbd>l</kbd></dd>
+    <dt>Previous page</dt>      <dd><kbd>h</kbd></dd>
+    <dt>Next page</dt>          <dd><kbd>l</kbd></dd>
+    <dt>Previous entry</dt>     <dd><kbd>j</kbd></dd>
+    <dt>Next entry</dt>         <dd><kbd>k</kbd></dd>
+    <dt>Grid / table view</dt>  <dd><kbd>g</kbd></dd>
+    <dt>Focus search</dt>       <dd><kbd>/</kbd></dd>
   </dl>
 </dialog>
 
